# RDMA-Sockets

./: .gitignore  CMakeLists.txt  CMakeListsTCP.txt  README.md  arpdummy  arpdummy.c  flash-tap.sh  ip  mak  mult-run-client.sh  run-client.sh  run-client.sh.save  run-dummy.sh  setup.sh
anp-p4/: sh-install-p4-env.sh
anp-p4/duplication/: routing.p4
anp-p4/duplication/topo/: mirroring-cli-input.txt  s1-runtime.json  s2-runtime.json  s3-runtime.json  topology.json
anp-p4/loss/: routing.p4
anp-p4/loss/topo/: s1-runtime.json  s2-runtime.json  s3-runtime.json  topology.json
anp-p4/routing/: routing.p4  run-tcpdump.sh  run-tcpdump.sh.save
anp-p4/routing/topo/: s1-runtime.json  s2-runtime.json  s3-runtime.json
anp-p4/utils/: run_exercise.py.save
graphs/: plots_bandwidth.py  plots_buffers_used.py  plots_cpu.py  plots_cpu_efficiency.py  plots_latency.py  plots_memory.py  plots_res_mem.py
include/: anpnetstack.h
rdma_animesh/: rdma_client.c  rdma_server.c
server-client/: common.c  common.h  tcp_client.c  tcp_client_mult.c  tcp_server.c  tcp_server_mult.c
src/: anp_netdev.c  anp_netdev.h  anpwrapper.c  anpwrapper.h  arp.c  arp.h  config.h  debug.h  ethernet.h  icmp.c  icmp.h  init.c  init.h  ip.h  ip_rx.c  ip_tx.c  linklist.h  rdma_common.c  rdma_common.h  rdmawrapper.c  rdmawrapper.h  route.c  route.h  socklist.c  socklist.h  subuff.c  subuff.h  systems_headers.h  tap_netdev.c  tap_netdev.h  timer.c  timer.h  utilities.c  utilities.h
src/arp/: arp.c
src/icmp/: icmp.c  icmp.h
src/ip/: ip.h  ip_rx.c  ip_tx.c
src/tcp/: isn.c  isn.h  ringbuffer.c  ringbuffer.h  tcb.c  tcb.h  tcb_store.c  tcb_store.h  tcp.h  tcp_rx.c  tcp_tx.c
